# zero2prod

./: .gitignore  Cargo.toml  Dockerfil.bak  Dockerfile  README.md  configuration.yaml  pre_env
configuration/: base.yaml  production.yaml
migrations/: 20230802134238_make_status_not_null_in_subscriptions.sql  20230909020651_rename_password_column.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs.bak
tests/api/: health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
