[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.169", features = ["derive"] }
config = "0.13.3"
uuid = { version = "1.4.0", features = ["v4"] }
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.5"
serde-aux = "4.2.0"
unicode-segmentation = "1.10.1"
validator = "0.16.1"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.47"
anyhow = "1.0.75"
base64 = "0.21.3"
sha3 = "0.10.8"
argon2 = { version = "0.5.2", features = ["std"] }
urlencoding = "2.1.3"

# Using table-like toml syntax to avoid a super-long line!
# [dependencies.sqlx]
# version = "0.7.1"
# default-featues = false
# features = [
#     "runtime-tokio-rustls",
#     "macros",
#     "postgres",
#     "uuid",
#     "chrono",
#     "migrate"
# ]

[dependencies.sqlx]
version = "=0.6.3"
default-featues = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.11.18"
default-features = false
features = ["json", "rustls-tls"]

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
once_cell = "1.18.0"
claims = "0.7.1"
fake = "~2.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
tokio = { version = "1.29.1", features = ["macros", "rt"] }
wiremock = "0.5.19"
serde_json = "1.0.104"
linkify = "0.10.0"
